cleaning up data pipelines, adding 8k irrelevants

--- a/src/EmbeddingModels/preprocess_embeddings.ipynb
+++ b/src/EmbeddingModels/preprocess_embeddings.ipynb
@@ -144,17 +144,11 @@
     }
    ],
    "source": [
-    "def import_labelled_data(path=\"data/labelled/data.json\", group_relevant=True):\n",
+    "def import_labelled_data(path=\"data/labelled/data.json\"):\n",
     "    data = pd.read_json(path, encoding=\"latin-1\")\n",
-    "    data[\"relevance\"] = data[\"class\"].apply(\n",
-    "        lambda x: \"relevant\" if x != \"irrelevant\" else x\n",
-    "    )\n",
     "    return data\n",
     "\n",
-    "data = import_labelled_data(path='../../data/labelled/data.json',group_relevant=False)\n",
-    "\n",
-    "# drop null classes\n",
-    "data = data.dropna(subset=[\"class\"])\n",
+    "data = import_labelled_data(path='../../data/labelled/data.json',)\n",
     "\n",
     "if DEV:\n",
     "    data = data.sample(5000)\n",
