--- a/src/Preprocessing/cleaners/irrelevant_data_cleaner.ipynb
+++ b/src/Preprocessing/cleaners/irrelevant_data_cleaner.ipynb
@@ -42,12 +42,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4035ab621474397988904196648795f",
+       "model_id": "b1748d6ef6c04c4eb388e68fa580c859",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2132 [00:00<?, ?it/s]"
+       "  0%|          | 0/10688 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -82,32 +82,32 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>https://www.deere.com/assets/pdfs/region-2/our...</td>\n",
-       "      <td>1/2024 Learning, fun and farming h t n o m e h...</td>\n",
+       "      <td>https://documents1.worldbank.org/curated/en/64...</td>\n",
+       "      <td>d e z i r o h t u A e Document of r u s The Wo...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>https://www.dcmshriram.com/images/H2ECComplian...</td>\n",
-       "      <td>th Ref. No. :SFC/EPC/2.4/174A Date : 30 June 2...</td>\n",
+       "      <td>https://www.ysgoldyffrynconwy.org/documents/25...</td>\n",
+       "      <td>FFORDDNEBO FFON./TEL.: 0 f 492 642800 LLANRWST...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>https://ncs.go.ug/files/NCS%20ANNUAL%20REPORT%...</td>\n",
-       "      <td>ANNUAL REPORT 2022/2023 NCS CORE VALUES Honest...</td>\n",
+       "      <td>http://repositorio.lamolina.edu.pe/bitstream/h...</td>\n",
+       "      <td>UNIVERSIDAD NACIONAL AGRARIA LA MOLINA FACULTA...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>https://dellrapidschamber.com/wp-content/uploa...</td>\n",
-       "      <td>May Newsletter We exist to support local busin...</td>\n",
+       "      <td>https://www.bsp.com.pg/media/e3tn0bne/pacific-...</td>\n",
+       "      <td>MARCH QUARTER 2018 Contents Highlights Global ...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>http://debejyo.com/publications/spie10_chakrab...</td>\n",
-       "      <td>Active Learning Data Selection for Adaptive On...</td>\n",
+       "      <td>https://repositorio.imarpe.gob.pe/bitstream/20...</td>\n",
+       "      <td>Boletín Diario Oceanográfico Año 10, N° 34 Sáb...</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -116,18 +116,18 @@
       ],
       "text/plain": [
        "                                                 URL  \\\n",
-       "0  https://www.deere.com/assets/pdfs/region-2/our...   \n",
-       "1  https://www.dcmshriram.com/images/H2ECComplian...   \n",
-       "2  https://ncs.go.ug/files/NCS%20ANNUAL%20REPORT%...   \n",
-       "3  https://dellrapidschamber.com/wp-content/uploa...   \n",
-       "4  http://debejyo.com/publications/spie10_chakrab...   \n",
+       "0  https://documents1.worldbank.org/curated/en/64...   \n",
+       "1  https://www.ysgoldyffrynconwy.org/documents/25...   \n",
+       "2  http://repositorio.lamolina.edu.pe/bitstream/h...   \n",
+       "3  https://www.bsp.com.pg/media/e3tn0bne/pacific-...   \n",
+       "4  https://repositorio.imarpe.gob.pe/bitstream/20...   \n",
        "\n",
        "                            ExtractedTextUntokenized RawData  \n",
-       "0  1/2024 Learning, fun and farming h t n o m e h...     NaN  \n",
-       "1  th Ref. No. :SFC/EPC/2.4/174A Date : 30 June 2...     NaN  \n",
-       "2  ANNUAL REPORT 2022/2023 NCS CORE VALUES Honest...     NaN  \n",
-       "3  May Newsletter We exist to support local busin...     NaN  \n",
-       "4  Active Learning Data Selection for Adaptive On...     NaN  "
+       "0  d e z i r o h t u A e Document of r u s The Wo...     NaN  \n",
+       "1  FFORDDNEBO FFON./TEL.: 0 f 492 642800 LLANRWST...     NaN  \n",
+       "2  UNIVERSIDAD NACIONAL AGRARIA LA MOLINA FACULTA...     NaN  \n",
+       "3  MARCH QUARTER 2018 Contents Highlights Global ...     NaN  \n",
+       "4  Boletín Diario Oceanográfico Año 10, N° 34 Sáb...     NaN  "
       ]
      },
      "execution_count": 2,
@@ -284,7 +284,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "faa03fd3e4f4409dacd47e70c1914769",
+       "model_id": "352c9732acdc43b7add421e811df978d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -354,109 +354,134 @@
        "      <th></th>\n",
        "      <th>url</th>\n",
        "      <th>text</th>\n",
-       "      <th>class</th>\n",
+       "      <th>relevance</th>\n",
+       "      <th>multiclasses</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>https://www.deere.com/assets/pdfs/region-2/our...</td>\n",
-       "      <td>1/2024 Learning, fun and farming h t n o m e h...</td>\n",
+       "      <td>https://documents1.worldbank.org/curated/en/64...</td>\n",
+       "      <td>d e z i r o h t u A e Document of r u s The Wo...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>https://www.dcmshriram.com/images/H2ECComplian...</td>\n",
-       "      <td>th Ref. No. :SFC/EPC/2.4/174A Date : 30 June 2...</td>\n",
+       "      <td>https://www.ysgoldyffrynconwy.org/documents/25...</td>\n",
+       "      <td>FFORDDNEBO FFON./TEL.: 0 f 492 642800 LLANRWST...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>https://ncs.go.ug/files/NCS%20ANNUAL%20REPORT%...</td>\n",
-       "      <td>ANNUAL REPORT 2022/2023 NCS CORE VALUES Honest...</td>\n",
+       "      <td>http://repositorio.lamolina.edu.pe/bitstream/h...</td>\n",
+       "      <td>UNIVERSIDAD NACIONAL AGRARIA LA MOLINA FACULTA...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>https://dellrapidschamber.com/wp-content/uploa...</td>\n",
-       "      <td>May Newsletter We exist to support local busin...</td>\n",
+       "      <td>https://www.bsp.com.pg/media/e3tn0bne/pacific-...</td>\n",
+       "      <td>MARCH QUARTER 2018 Contents Highlights Global ...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>http://debejyo.com/publications/spie10_chakrab...</td>\n",
-       "      <td>Active Learning Data Selection for Adaptive On...</td>\n",
+       "      <td>https://repositorio.imarpe.gob.pe/bitstream/20...</td>\n",
+       "      <td>Boletín Diario Oceanográfico Año 10, N° 34 Sáb...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2127</th>\n",
-       "      <td>https://deadliestwebattacks.com/assets/devops-...</td>\n",
-       "      <td>DevOps Is Automation, DevSecOps Is People Mike...</td>\n",
+       "      <th>10683</th>\n",
+       "      <td>http://www.zones-sensibles.org/wp-content/uplo...</td>\n",
+       "      <td>Eduardo Kohn com ment pensent les forêts Vers ...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2128</th>\n",
-       "      <td>https://www.daytonsuperior.com/docs/default-so...</td>\n",
-       "      <td>Yeti-Anchor® Precast &amp; Tilt-Up TECHNICAL DATA ...</td>\n",
+       "      <th>10684</th>\n",
+       "      <td>https://documents1.worldbank.org/curated/en/86...</td>\n",
+       "      <td>d e z i r o h t u A e r u s o l c s i D c i l ...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2129</th>\n",
-       "      <td>https://dce-uae.com/wp-content/uploads/2024/04...</td>\n",
-       "      <td>MAŁOPOLSKA 14 UNESCO World Heritage List sites...</td>\n",
+       "      <th>10685</th>\n",
+       "      <td>https://www.ywcaclinton.org/_files/ugd/aa771b_...</td>\n",
+       "      <td>Care Centers and Preschools Licensing Standard...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2130</th>\n",
-       "      <td>https://www.dekosrl.com/wp-content/uploads/202...</td>\n",
-       "      <td>CHAPTER ONE TheCompany 4 Mission: know-how, pe...</td>\n",
+       "      <th>10686</th>\n",
+       "      <td>https://www.deped.gov.ph/wp-content/uploads/20...</td>\n",
+       "      <td>Republic of the Philippines Department of Educ...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2131</th>\n",
-       "      <td>https://www.delltechnologies.com/asset/en-ie/p...</td>\n",
-       "      <td>OptiPlex 3000 Thin Client Sleek and mighty des...</td>\n",
+       "      <th>10687</th>\n",
+       "      <td>https://www.delltechnologies.com/asset/en-ie/s...</td>\n",
+       "      <td>on iattanpsoTrred ifUnio ton ioductrntI cesMiv...</td>\n",
        "      <td>irrelevant</td>\n",
+       "      <td>[]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>2132 rows × 3 columns</p>\n",
+       "<p>10688 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                    url  \\\n",
-       "0     https://www.deere.com/assets/pdfs/region-2/our...   \n",
-       "1     https://www.dcmshriram.com/images/H2ECComplian...   \n",
-       "2     https://ncs.go.ug/files/NCS%20ANNUAL%20REPORT%...   \n",
-       "3     https://dellrapidschamber.com/wp-content/uploa...   \n",
-       "4     http://debejyo.com/publications/spie10_chakrab...   \n",
-       "...                                                 ...   \n",
-       "2127  https://deadliestwebattacks.com/assets/devops-...   \n",
-       "2128  https://www.daytonsuperior.com/docs/default-so...   \n",
-       "2129  https://dce-uae.com/wp-content/uploads/2024/04...   \n",
-       "2130  https://www.dekosrl.com/wp-content/uploads/202...   \n",
-       "2131  https://www.delltechnologies.com/asset/en-ie/p...   \n",
+       "                                                     url  \\\n",
+       "0      https://documents1.worldbank.org/curated/en/64...   \n",
+       "1      https://www.ysgoldyffrynconwy.org/documents/25...   \n",
+       "2      http://repositorio.lamolina.edu.pe/bitstream/h...   \n",
+       "3      https://www.bsp.com.pg/media/e3tn0bne/pacific-...   \n",
+       "4      https://repositorio.imarpe.gob.pe/bitstream/20...   \n",
+       "...                                                  ...   \n",
+       "10683  http://www.zones-sensibles.org/wp-content/uplo...   \n",
+       "10684  https://documents1.worldbank.org/curated/en/86...   \n",
+       "10685  https://www.ywcaclinton.org/_files/ugd/aa771b_...   \n",
+       "10686  https://www.deped.gov.ph/wp-content/uploads/20...   \n",
+       "10687  https://www.delltechnologies.com/asset/en-ie/s...   \n",
        "\n",
-       "                                                   text       class  \n",
-       "0     1/2024 Learning, fun and farming h t n o m e h...  irrelevant  \n",
-       "1     th Ref. No. :SFC/EPC/2.4/174A Date : 30 June 2...  irrelevant  \n",
-       "2     ANNUAL REPORT 2022/2023 NCS CORE VALUES Honest...  irrelevant  \n",
-       "3     May Newsletter We exist to support local busin...  irrelevant  \n",
-       "4     Active Learning Data Selection for Adaptive On...  irrelevant  \n",
-       "...                                                 ...         ...  \n",
-       "2127  DevOps Is Automation, DevSecOps Is People Mike...  irrelevant  \n",
-       "2128  Yeti-Anchor® Precast & Tilt-Up TECHNICAL DATA ...  irrelevant  \n",
-       "2129  MAŁOPOLSKA 14 UNESCO World Heritage List sites...  irrelevant  \n",
-       "2130  CHAPTER ONE TheCompany 4 Mission: know-how, pe...  irrelevant  \n",
-       "2131  OptiPlex 3000 Thin Client Sleek and mighty des...  irrelevant  \n",
+       "                                                    text   relevance  \\\n",
+       "0      d e z i r o h t u A e Document of r u s The Wo...  irrelevant   \n",
+       "1      FFORDDNEBO FFON./TEL.: 0 f 492 642800 LLANRWST...  irrelevant   \n",
+       "2      UNIVERSIDAD NACIONAL AGRARIA LA MOLINA FACULTA...  irrelevant   \n",
+       "3      MARCH QUARTER 2018 Contents Highlights Global ...  irrelevant   \n",
+       "4      Boletín Diario Oceanográfico Año 10, N° 34 Sáb...  irrelevant   \n",
+       "...                                                  ...         ...   \n",
+       "10683  Eduardo Kohn com ment pensent les forêts Vers ...  irrelevant   \n",
+       "10684  d e z i r o h t u A e r u s o l c s i D c i l ...  irrelevant   \n",
+       "10685  Care Centers and Preschools Licensing Standard...  irrelevant   \n",
+       "10686  Republic of the Philippines Department of Educ...  irrelevant   \n",
+       "10687  on iattanpsoTrred ifUnio ton ioductrntI cesMiv...  irrelevant   \n",
        "\n",
-       "[2132 rows x 3 columns]"
+       "      multiclasses  \n",
+       "0               []  \n",
+       "1               []  \n",
+       "2               []  \n",
+       "3               []  \n",
+       "4               []  \n",
+       "...            ...  \n",
+       "10683           []  \n",
+       "10684           []  \n",
+       "10685           []  \n",
+       "10686           []  \n",
+       "10687           []  \n",
+       "\n",
+       "[10688 rows x 4 columns]"
       ]
      },
      "execution_count": 8,
@@ -469,14 +494,16 @@
     "# renaming columns\n",
     "write_data = data[['URL', 'ExtractedTextUntokenized']]\n",
     "write_data.columns = ['url', 'text']\n",
-    "write_data['class'] = 'irrelevant'\n",
+    "write_data['relevance'] = ['irrelevant']*len(write_data)\n",
+    "write_data['multiclasses'] = [[]] * len(write_data)\n",
+    "\n",
     "\n",
     "write_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2024-07-08T16:32:53.288712Z",
@@ -509,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
