--- a/src/Preprocessing/cleaners/scraped_cleaning.ipynb
+++ b/src/Preprocessing/cleaners/scraped_cleaning.ipynb
@@ -333,7 +333,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c2ecf6293d5413fb4a8cb7b2149071c",
+       "model_id": "d0425f02c1bf4c75a035a4acdefe3be2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -361,6 +361,7 @@
       "-----403-----\n",
       "https://iucn-csg.org/wp-content/uploads/2010/03/Final-IUCN-Publication-Jan-7-2015-1.pdf\n",
       "-----403-----\n",
+      "https://www.wetlands.org/publications/1304/%0A 404\n",
       "-----403-----\n",
       "https://iucn-csg.org/wp-content/uploads/2010/03/Final-IUCN-Publication-Jan-7-2015-1.pdf\n",
       "-----403-----\n",
@@ -372,7 +373,6 @@
       "-----403-----\n",
       "https://iucn-csg.org/wp-content/uploads/2010/03/IUCNActionPlan2003-009.pdf\n",
       "-----403-----\n",
-      "https://www.wetlands.org/publications/1304/%0A 404\n",
       "-----403-----\n",
       "https://www.researchgate.net/profile/Dr_Manfred_Jusaitis/publication/260230062_Conservation_translocation_of_the_large-headed_daisy_to_Mount_Bold_South_Australia/links/0046353041f2d0779a000000.pdf#page=52\n",
       "-----403-----\n",
@@ -939,7 +939,7 @@
      "output_type": "stream",
      "text": [
       "[(0, False), (1, False), (2, False), (3, False), (4, True), (5, True), (6, True), (7, False), (8, False), (9, False), (10, False), (11, True), (12, True), (13, True), (14, False), (15, False), (16, True), (17, False), (18, True), (19, True), (20, True), (21, False), (22, False), (23, False), (24, True), (25, True), (26, False), (27, True), (28, True), (29, True), (30, True), (31, False), (32, False), (33, False), (34, False), (35, False), (36, False), (37, False), (38, False), (39, True), (40, True), (41, False), (42, False), (43, False), (44, False), (45, False), (46, False), (47, False), (48, False), (49, False), (50, False), (51, False), (52, False), (53, False), (54, False), (55, False), (56, False), (57, False), (58, False), (59, False), (60, False), (61, False), (62, False), (63, True), (64, False), (65, False), (66, False), (67, False), (68, False), (69, True), (70, False), (71, False), (72, False), (73, True), (74, True), (75, True), (76, False), (77, False), (78, False), (79, False), (80, False), (81, True), (82, False), (83, False), (84, False), (85, True), (86, False), (87, False), (88, False), (89, False), (90, False), (91, False), (92, False), (93, False), (94, False), (95, False), (96, False), (97, False), (98, False), (99, False), (100, False), (101, False), (102, False), (103, False), (104, False), (105, False), (106, False), (107, False), (108, False), (109, False), (110, False), (111, False), (112, False), (113, True), (114, True), (115, True), (116, False), (117, False), (118, False), (119, False), (120, False), (121, False), (122, False), (123, False), (124, False), (125, False), (126, False), (127, False), (128, False), (129, False), (130, False), (131, False), (132, True), (133, False), (134, False), (135, False), (136, False), (137, False), (138, False), (139, False), (140, False), (141, False), (142, False), (143, False), (144, False), (145, False), (146, False), (147, False), (148, False), (149, False), (150, False), (151, False), (152, False), (153, False), (154, True), (155, False), (156, False), (157, False), (158, False), (159, False), (160, False), (161, False), (162, False), (163, False), (164, False), (165, False), (166, False), (167, False), (168, False), (169, False), (170, False), (171, False), (172, False), (173, False), (174, False), (175, True), (176, False), (177, False), (178, False), (179, False), (180, False), (181, False), (182, False), (183, False), (184, False), (185, False), (186, False), (187, False), (188, False), (189, False), (190, False), (191, False), (192, False), (193, False), (194, False), (195, True), (196, True), (197, False), (198, False), (199, False), (200, False), (201, False), (202, False), (203, False), (204, False), (205, True), (206, False), (207, False), (208, False), (209, False), (210, False), (211, False), (212, False), (213, False), (214, False), (215, False), (216, True), (217, False), (218, False), (219, False), (220, False), (221, False), (222, False), (223, True), (224, True), (225, True), (226, False), (227, False), (228, False), (229, False), (230, True), (231, False), (232, False), (233, False), (234, False), (235, False), (236, False), (237, False), (238, False), (239, False), (240, False), (241, False), (242, False), (243, False), (244, False), (245, False), (246, False), (247, False), (248, False), (249, False), (250, False), (251, False), (252, False), (253, False), (254, False), (255, False), (256, False), (257, False), (258, False), (259, True), (260, True), (261, False), (262, False), (263, False), (264, True), (265, True), (266, False), (267, False), (268, False), (269, True), (270, True), (271, False), (272, False), (273, True), (274, True), (275, True), (276, False), (277, False), (278, False), (279, False), (280, False), (281, True), (282, False), (283, True), (284, True), (285, True), (286, False), (287, False), (288, False), (289, False), (290, False), (291, False), (292, False), (293, False), (294, False), (295, True), (296, False), (297, False), (298, True), (299, False), (300, False), (301, False), (302, False), (303, False), (304, False), (305, False), (306, False), (307, False), (308, False), (309, True), (310, True), (311, False), (312, False), (313, False), (314, True), (315, False), (316, False), (317, False), (318, False), (319, False), (320, False), (321, False), (322, False), (323, False), (324, False), (325, False), (326, True), (327, True), (328, True), (329, False), (330, False), (331, False), (332, False), (333, False), (334, False), (335, False), (336, False), (337, False), (338, False), (339, False), (340, False), (341, False), (342, False), (343, False), (344, False), (345, True), (346, False), (347, False), (348, False), (349, False), (350, False), (351, False), (352, False), (353, False), (354, False), (355, False), (356, False), (357, False), (358, False), (359, False), (360, True), (361, True), (362, False), (363, False), (364, False), (365, False), (366, False), (367, False), (368, False), (369, False), (370, False), (371, False), (372, False), (373, False), (374, True), (375, False), (376, False), (377, False), (378, False), (379, False), (380, False), (381, False), (382, False), (383, True), (384, True), (385, True), (386, False), (387, False), (388, False), (389, False), (390, False), (391, True), (392, False), (393, False), (394, False), (395, False), (396, False), (397, False), (398, False), (399, False), (400, False), (401, False), (402, True), (403, False), (404, True), (405, False), (406, True), (407, True), (408, False), (409, False), (410, True), (411, False), (412, False), (413, True), (414, False), (415, False), (416, False), (417, False), (418, False), (419, False), (420, False), (421, False), (422, True), (423, False), (424, False), (425, False), (426, False), (427, False), (428, False), (429, False), (430, False), (431, False), (432, False), (433, False), (434, False), (435, False), (436, False), (437, False), (438, False), (439, True), (440, False), (441, False), (442, False), (443, False), (444, False), (445, False), (446, False), (447, True), (448, True), (449, False), (450, False), (451, False), (452, False), (453, False), (454, False), (455, True), (456, True), (457, True), (458, False), (459, False), (460, False), (461, False), (462, False), (463, True), (464, False), (465, True), (466, True), (467, False), (468, False), (469, False), (470, False), (471, True), (472, False), (473, True), (474, True), (475, True), (476, True), (477, True), (478, True), (479, True), (480, True), (481, True), (482, True), (483, False), (484, False), (485, False), (486, False), (487, False)]\n",
-      "393\n"
+      "Removing 393 invalid URLS\n"
      ]
     }
    ],
@@ -947,7 +947,7 @@
     "print(errors)\n",
     "errors = list(filter(lambda x: x[1] == False, errors))\n",
     "\n",
-    "print(len(errors))\n",
+    "print(f'Removing {len(errors)} invalid URLS')\n",
     "\n",
     "# replace invalid URLs with nan\n",
     "# for i,x in errors:\n",
@@ -1061,7 +1061,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2a55e42ab6d455da19debdfd8c5d590",
+       "model_id": "6e01eeefe9604b348a432470395425a7",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1085,8 +1085,8 @@
      "output_type": "stream",
      "text": [
       "Error opening PDF:  https://iucn-csg.org/wp-content/uploads/2010/03/Final-IUCN-Publication-Jan-7-2015-1.pdf\n",
-      "Error opening PDF: Error opening PDF:  https://iucn-csg.org/wp-content/uploads/2010/03/Final-IUCN-Publication-Jan-7-2015-1.pdf\n",
-      " https://iucn-csg.org/wp-content/uploads/2010/03/Final-IUCN-Publication-Jan-7-2015-1.pdf\n",
+      "Error opening PDF:  https://iucn-csg.org/wp-content/uploads/2010/03/Final-IUCN-Publication-Jan-7-2015-1.pdf\n",
+      "Error opening PDF:  https://iucn-csg.org/wp-content/uploads/2010/03/Final-IUCN-Publication-Jan-7-2015-1.pdf\n",
       "Error opening PDF:  https://iucn-csg.org/wp-content/uploads/2010/03/IUCNActionPlan2003-009.pdf\n",
       "Error opening PDF:  https://www.researchgate.net/profile/Dr_Manfred_Jusaitis/publication/260230062_Conservation_translocation_of_the_large-headed_daisy_to_Mount_Bold_South_Australia/links/0046353041f2d0779a000000.pdf#page=52\n"
      ]
@@ -1611,6 +1611,16 @@
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.insert(0, 'multiclasses', data['class'].map(lambda x: {x}))\n",
+    "data.insert(1, 'relevance', ['relevant'] * len(data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -1633,6 +1643,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>multiclasses</th>\n",
+       "      <th>relevance</th>\n",
        "      <th>class</th>\n",
        "      <th>Reference type</th>\n",
        "      <th>Author</th>\n",
@@ -1655,6 +1667,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>{Birds}</td>\n",
+       "      <td>relevant</td>\n",
        "      <td>Birds</td>\n",
        "      <td>Magazine Article</td>\n",
        "      <td>A. Anonymous</td>\n",
@@ -1675,6 +1689,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
+       "      <td>{Birds}</td>\n",
+       "      <td>relevant</td>\n",
        "      <td>Birds</td>\n",
        "      <td>Magazine Article</td>\n",
        "      <td>A. Anonymous</td>\n",
@@ -1695,6 +1711,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
+       "      <td>{Birds}</td>\n",
+       "      <td>relevant</td>\n",
        "      <td>Birds</td>\n",
        "      <td>Magazine Article</td>\n",
        "      <td>A. Anonymous</td>\n",
@@ -1715,6 +1733,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
+       "      <td>{Animals Ex-Situ}</td>\n",
+       "      <td>relevant</td>\n",
        "      <td>Animals Ex-Situ</td>\n",
        "      <td>Magazine Article</td>\n",
        "      <td>A. Anonymous</td>\n",
@@ -1735,6 +1755,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
+       "      <td>{Animals Ex-Situ}</td>\n",
+       "      <td>relevant</td>\n",
        "      <td>Animals Ex-Situ</td>\n",
        "      <td>Magazine Article</td>\n",
        "      <td>A. Anonymous</td>\n",
@@ -1758,19 +1780,19 @@
        "</div>"
       ],
       "text/plain": [
-       "              class    Reference type        Author  Year  \\\n",
-       "4             Birds  Magazine Article  A. Anonymous  2008   \n",
-       "5             Birds  Magazine Article  A. Anonymous  2009   \n",
-       "6             Birds  Magazine Article  A. Anonymous  2011   \n",
-       "11  Animals Ex-Situ  Magazine Article  A. Anonymous  2008   \n",
-       "12  Animals Ex-Situ  Magazine Article  A. Anonymous  2009   \n",
+       "         multiclasses relevance            class    Reference type  \\\n",
+       "4             {Birds}  relevant            Birds  Magazine Article   \n",
+       "5             {Birds}  relevant            Birds  Magazine Article   \n",
+       "6             {Birds}  relevant            Birds  Magazine Article   \n",
+       "11  {Animals Ex-Situ}  relevant  Animals Ex-Situ  Magazine Article   \n",
+       "12  {Animals Ex-Situ}  relevant  Animals Ex-Situ  Magazine Article   \n",
        "\n",
-       "                       Title Series Editor  \\\n",
-       "4   Ex-situ breeding summary           NaN   \n",
-       "5   Ex-situ breeding summary           NaN   \n",
-       "6               Front Matter           NaN   \n",
-       "11  Ex-situ breeding summary           NaN   \n",
-       "12  Ex-situ breeding summary           NaN   \n",
+       "          Author  Year                     Title Series Editor  \\\n",
+       "4   A. Anonymous  2008  Ex-situ breeding summary           NaN   \n",
+       "5   A. Anonymous  2009  Ex-situ breeding summary           NaN   \n",
+       "6   A. Anonymous  2011              Front Matter           NaN   \n",
+       "11  A. Anonymous  2008  Ex-situ breeding summary           NaN   \n",
+       "12  A. Anonymous  2009  Ex-situ breeding summary           NaN   \n",
        "\n",
        "                                    Series/Book Title Place Published  \\\n",
        "4   Flamingo: Bulletin of the IUCN-SSC/Wetlands In...             NaN   \n",
@@ -1808,7 +1830,7 @@
        "12  \\n\\n \\n \\n \\n \\n \\n \\nABOUT THE GROUP \\n \\nThe...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1819,97 +1841,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# format as JSON\n",
     "\n",
-    "def write():\n",
+    "def write(data):\n",
     "\n",
-    "    write_data = data.copy()\n",
-    "    write_data.columns = map(str.lower, write_data.columns)\n",
+    "    data.columns = map(str.lower, data.columns)\n",
     "\n",
     "\n",
-    "    json = write_data.to_json(path_or_buf=\"../../../data/text-grey-literature-sources.json\",orient='records')"
+    "    json = data.to_json(path_or_buf=\"../../../data/labelled/scraped/scraped.json\",orient='records')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "Index: 84 entries, 4 to 482\n",
-      "Data columns (total 17 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   class              84 non-null     object \n",
-      " 1   Reference type     84 non-null     object \n",
-      " 2   Author             84 non-null     object \n",
-      " 3   Year               84 non-null     int64  \n",
-      " 4   Title              84 non-null     object \n",
-      " 5   Series Editor      0 non-null      object \n",
-      " 6   Series/Book Title  58 non-null     object \n",
-      " 7   Place Published    10 non-null     object \n",
-      " 8   Institution        82 non-null     object \n",
-      " 9   Publisher          1 non-null      object \n",
-      " 10  Date               4 non-null      object \n",
-      " 11  Report number      16 non-null     object \n",
-      " 12  DOI                0 non-null      object \n",
-      " 13  Folder             84 non-null     object \n",
-      " 14  Abstract           0 non-null      float64\n",
-      " 15  URL                84 non-null     object \n",
-      " 16  text               84 non-null     object \n",
-      "dtypes: float64(1), int64(1), object(15)\n",
-      "memory usage: 11.8+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import json\n",
-    "\n",
-    "def write_to_labelled():\n",
-    "\n",
-    "    write_data = data.copy()\n",
-    "    write_data.columns = map(str.lower, write_data.columns)\n",
-    "\n",
-    "    irr = {\n",
-    "        \"class\": \"irrelevant\",\n",
-    "            \"url\": \"https://help.uis.cam.ac.uk/service/collaboration/gitlab\",\n",
-    "            \"title\": \"University Information Services - Introduction to Gitlab\",\n",
-    "            \"text\": \"What does GitLab cost? UIS's GitLab service is available free of charge to all University of Cambridge users with a University account How do I get GitLab? Any current member of the University with a University account can access the UIS's Developer Hub. Choose the 'sign in with University Account' option on the Developer Hub login page. Different types of account are available: User accounts: These are how project contributors will normally access GitLab. They are created on-the-fly at first University Account login. Administrator accounts: These are available for those who need administrative rights over Projects and Groups. Administrative accounts are available in addition to personal accounts on request. If you administer one or more groups, you can request an administrator account by opening an issue in the GitLab support project. External accounts: These are available to people who do not have a University account. They are issued on a discretionary basis. You can request one by opening an issue in the GitLab support project. Robot accounts: These are for use with continuous integration and deployment systems that require direct API access and for which deploy keys do not suffice. They are not intended for use by individuals. They are always configured with the same permissions as external accounts and must have a valid role email address associated with them.\"\n",
-    "        }\n",
-    "\n",
-    "    labelled = {'relevant': write_data.replace({float('nan'): None}).to_dict(orient='records'),   \"irrelevant\": [irr]}\n",
-    "\n",
-    "    i = 0\n",
-    "    # write to individual files\n",
-    "    for key in labelled:\n",
-    "        for record in labelled[key]:\n",
-    "\n",
-    "            try:\n",
-    "\n",
-    "                with open(f\"../../../data/labelled/scraped/{i} - {record['title'].replace('.','').replace(':','')[:25]}.json\", \"w\") as f:\n",
-    "                    json.dump(record, f, indent=4)\n",
-    "\n",
-    "            except:\n",
-    "\n",
-    "                with open(\n",
-    "                    f\"../../../data/labelled/scraped/{i} - {record['title'].replace('.','').replace(':','')[:10]}.json\",\n",
-    "                    \"w\",\n",
-    "                ) as f:\n",
-    "                    json.dump(record, f, indent=4)\n",
-    "            i += 1\n",
-    "\n",
-    "\n",
-    "write_to_labelled()\n",
-    "\n",
-    "data.info()"
+    "write(data)"
    ]
   }
  ],
@@ -1929,7 +1881,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
