--- a/src/SetFit/train_classifier.ipynb
+++ b/src/SetFit/train_classifier.ipynb
@@ -129,18 +129,12 @@
     }
    ],
    "source": [
-    "def import_labelled_data(path=\"data/labelled/data.json\", group_relevant=True):\n",
+    "def import_labelled_data(path=\"data/labelled/data.json\"):\n",
     "    data = pd.read_json(path, encoding=\"latin-1\")\n",
-    "    data[\"relevance\"] = data[\"class\"].apply(\n",
-    "        lambda x: \"relevant\" if x != \"irrelevant\" else x\n",
-    "    )\n",
     "    return data\n",
     "\n",
     "\n",
-    "data = import_labelled_data(path=\"../../data/labelled/data.json\", group_relevant=False)\n",
-    "\n",
-    "# drop null classes\n",
-    "data = data.dropna(subset=[\"class\"])\n",
+    "data = import_labelled_data(path=\"../../data/labelled/data.json\", )\n",
     "\n",
     "\n",
     "if DEV:\n",
